Adding function to compute the edgesize of all elements

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(main
     ElementQuad4.cpp
     Iterate.cpp
     MatrixDiagonal.cpp
+    Mesh.cpp
     MeshQuad4.cpp
     Vector.cpp
     VectorPartitioned.cpp)
