Applying Solver to MatrixPartitionedTyings

--- a/.travis.yml
+++ b/.travis.yml
@@ -93,6 +93,10 @@ script:
     - ./test/main
     # run examples
     - ./docs/examples/statics_FixedDisplacements_LinearElastic_example
-    - python docs/examples/statics_FixedDisplacements_LinearElastic_example.py --no-plot
     - ./docs/examples/statics_FixedDisplacements_LinearElastic_manual_partition
-    - python docs/examples/statics_FixedDisplacements_LinearElastic_manual_partition.py --no-plot
+    - ./docs/examples/statics_Periodic_ElastoPlasticFiniteStrainSimo_main
+    - ./docs/examples/statics_Periodic_ElastoPlastic_main
+    - ./docs/examples/statics_Periodic_LinearElastic_main
+    - ./docs/examples/statics_Periodic_NonLinearElastic_main
+    - python ../docs/examples/statics/FixedDisplacements_LinearElastic/example.py --no-plot
+    - python ../docs/examples/statics/FixedDisplacements_LinearElastic/manual_partition.py --no-plot
