--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -35,7 +35,7 @@ install:
     - conda install -c conda-forge mamba
     - mamba install -c conda-forge cmake xtensor xsimd python numpy pyxtensor catch2 h5py highfive
     - mamba install -c conda-forge gmatelastic gmatnonlinearelastic gmatelastoplastic gmatelastoplasticfinitestrainsimo
-    - mamba install -c conda-forge python-gmatelastic python-gmatnonlinearelastic python-gmatelastoplastic python-gmatelastoplasticfinitestrainsimo
+    - mamba install -c conda-forge python-gmatelastic
     # Build/install the library
     - cmake -G "NMake Makefiles" -DCMAKE_INSTALL_PREFIX=%MINICONDA%\\LIBRARY -DCMAKE_BUILD_TYPE=RELEASE -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON .
     - nmake
@@ -49,3 +49,9 @@ build_script:
     # Run examples
     - .\docs\examples\statics_FixedDisplacements_LinearElastic_example
     - .\docs\examples\statics_FixedDisplacements_LinearElastic_manual_partition
+    - .\docs\examples\statics_Periodic_ElastoPlasticFiniteStrainSimo_main
+    - .\docs\examples\statics_Periodic_ElastoPlastic_main
+    - .\docs\examples\statics_Periodic_LinearElastic_main
+    - .\docs\examples\statics_Periodic_NonLinearElastic_main
+    - python ..\docs\examples\statics\FixedDisplacements_LinearElastic\example.py --no-plot
+    - python ..\docs\examples\statics\FixedDisplacements_LinearElastic\manual_partition.py --no-plot
