--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -35,7 +35,7 @@ install:
     - conda install -c conda-forge mamba
     - mamba install -c conda-forge cmake xtensor xsimd python numpy pyxtensor catch2 h5py highfive
     - mamba install -c conda-forge gmatelastic gmatnonlinearelastic gmatelastoplastic gmatelastoplasticfinitestrainsimo
-    - mamba install -c conda-forge python-gmatelastic
+    - conda install -c conda-forge python-gmatelastic
     # Build/install the library
     - cmake -G "NMake Makefiles" -DCMAKE_INSTALL_PREFIX=%MINICONDA%\\LIBRARY -DCMAKE_BUILD_TYPE=RELEASE -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON .
     - nmake
