Reducing testing for the moment

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -33,7 +33,8 @@ install:
     - conda update -q conda
     - conda info -a
     - conda install -c conda-forge mamba
-    - mamba install -c conda-forge cmake xtensor xsimd python numpy pyxtensor catch2 h5py highfive gmatelastic gmatnonlinearelastic gmatelastoplastic gmatelastoplasticfinitestrainsimo python-gmatelastic
+    - mamba install -c conda-forge cmake xtensor xsimd python numpy pyxtensor catch2 h5py highfive gmatelastic gmatnonlinearelastic gmatelastoplastic gmatelastoplasticfinitestrainsimo
+    # - mamba install -c conda-forge cmake xtensor xsimd python numpy pyxtensor catch2 h5py highfive gmatelastic gmatnonlinearelastic gmatelastoplastic gmatelastoplasticfinitestrainsimo python-gmatelastic
     # Build/install the library
     - cmake -G "NMake Makefiles" -DCMAKE_INSTALL_PREFIX=%MINICONDA%\\LIBRARY -DCMAKE_BUILD_TYPE=RELEASE -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON .
     - nmake
@@ -51,5 +52,5 @@ build_script:
     - .\docs\examples\statics_Periodic_ElastoPlastic_main
     - .\docs\examples\statics_Periodic_LinearElastic_main
     - .\docs\examples\statics_Periodic_NonLinearElastic_main
-    - python ..\docs\examples\statics\FixedDisplacements_LinearElastic\example.py --no-plot
-    - python ..\docs\examples\statics\FixedDisplacements_LinearElastic\manual_partition.py --no-plot
+    # - python ..\docs\examples\statics\FixedDisplacements_LinearElastic\example.py --no-plot
+    # - python ..\docs\examples\statics\FixedDisplacements_LinearElastic\manual_partition.py --no-plot
