--- a/.travis.yml
+++ b/.travis.yml
@@ -71,17 +71,8 @@ install:
     - hash -r
     - conda config --set always_yes yes --set changeps1 no
     - conda update -q conda
-    - conda install -c conda-forge cmake
-    - conda install -c conda-forge xsimd
-    - conda install -c conda-forge xtensor
-    - conda install -c conda-forge python
-    - conda install -c conda-forge numpy
-    - conda install -c conda-forge pyxtensor
-    - conda install -c conda-forge catch2
-    - conda install -c conda-forge eigen
-    - conda install -c conda-forge gmatelastic
-    - conda install -c conda-forge python-gmatelastic
-    - conda install -c conda-forge highfive
+    - conda install -c conda-forge mamba
+    - mamba install -c conda-forge cmake xtensor xsimd python numpy pyxtensor catch2 h5py highfive gmatelastic gmatnonlinearelastic gmatelastoplastic gmatelastoplasticfinitestrainsimo python-gmatelastic
     # Build/install the library
     - cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON
     - make
