--- a/.travis.yml
+++ b/.travis.yml
@@ -89,5 +89,5 @@ script:
     # - ./docs/examples/statics_Periodic_NonLinearElastic_main
     # - ./docs/examples/statics_Periodic_ElastoPlastic_main
     # - ./docs/examples/statics_Periodic_ElastoPlasticFiniteStrainSimo_main
-    - python ../docs/examples/statics/FixedDisplacements_LinearElastic/example.py --no-plot
-    - python ../docs/examples/statics/FixedDisplacements_LinearElastic/manual_partition.py --no-plot
+    - python ./docs/examples/statics/FixedDisplacements_LinearElastic/example.py --no-plot
+    - python ./docs/examples/statics/FixedDisplacements_LinearElastic/manual_partition.py --no-plot
