API change Element*: "dV" now only returns raw data, the "asTensor" member function (and free function) can be used to convert the 'qscalar' to a 'qtensor'

--- a/test/basic/CMakeLists.txt
+++ b/test/basic/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(Catch2 REQUIRED)
 
 add_executable(test-basic
     main.cpp
+    Allocate.cpp
     ElementHex8.cpp
     ElementQuad4.cpp
     Iterate.cpp
