[CI] Updating environment to external libraries

--- a/.travis.yml
+++ b/.travis.yml
@@ -84,6 +84,8 @@ install:
       catch2
       h5py
       highfive
+      xdmfwrite_highfive
+      xdmfwrite_h5py
       gmatelastic
       gmatnonlinearelastic
       gmatelastoplastic
