--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -45,6 +45,8 @@ install:
       catch2
       h5py
       highfive
+      xdmfwrite_highfive
+      xdmfwrite_h5py
       gmatelastic
       gmatnonlinearelastic
       gmatelastoplastic
