--- a/environment.yaml
+++ b/environment.yaml
@@ -18,4 +18,4 @@ dependencies:
   - gmatelastoplastic
   - gmatelastoplasticfinitestrainsimo
   - gmatelastoplasticqpot
-  - python-gmatelastic
+  # - python-gmatelastic
