--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,11 +40,11 @@ jobs:
         activate-environment: test
         auto-activate-base: false
 
-    - name: Configure using CMake
+    - name: Configure using CMake (Unix)
       if: runner.os != 'Windows'
       run: cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON
 
-    - name: Configure using CMake
+    - name: Configure using CMake (Windows)
       if: runner.os == 'Windows'
       run: cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=OFF
 
@@ -57,10 +57,10 @@ jobs:
     - name: Run GMat-based C++ test
       run: ./test/gmat/test-gmat
 
-    - name: Run C++ example - Linear elastic (1)
+    - name: Run C++ example - Linear elastic (1) (Unix only)
       if: runner.os != 'Windows'
       run: ./docs/examples/statics_FixedDisplacements_LinearElastic_example
 
-    - name: Run C++ example - Linear elastic (2)
+    - name: Run C++ example - Linear elastic (2) (Unix only)
       if: runner.os != 'Windows'
       run: ./docs/examples/statics_FixedDisplacements_LinearElastic_manual_partition
