--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,9 @@ install(FILES "${CMAKE_CURRENT_BINARY_DIR}/GooseFEM.pc"
 
 include("GooseFEMConfig.cmake")
 
+set(CTEST_TEST_TARGET_ALIAS RUN_TESTS)
+include(CTest)
+
 if(BUILD_TESTS)
     enable_testing()
     add_subdirectory(test/basic)
