--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,7 +82,7 @@ install(FILES "${CMAKE_CURRENT_BINARY_DIR}/GooseFEM.pc"
 
 include("GooseFEMConfig.cmake")
 
-set(CTEST_TEST_TARGET_ALIAS RUN_TESTS)
+set(CTEST_TEST_TARGET_ALIAS RUN_TESTS_AND_EXAMPLES)
 include(CTest)
 
 if(BUILD_TESTS)
