--- a/docs/examples/CMakeLists.txt
+++ b/docs/examples/CMakeLists.txt
@@ -6,28 +6,44 @@ if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
     find_package(GooseFEM REQUIRED CONFIG)
 endif()
 
-option(WARNINGS "Show build warnings" ON)
+set(ASSERT OFF)
+set(DEBUG OFF)
 option(SIMD "Enable xsimd" ON)
-option(DEBUG "Enable all assertions" OFF)
+option(WARNINGS "Enable warnings" ON)
 
 set(HIGHFIVE_USE_BOOST 0)
 set(HIGHFIVE_USE_XTENSOR 1)
 find_package(HighFive REQUIRED)
 find_package(XDMFWrite_HighFive REQUIRED)
+find_package(GMatElastic REQUIRED)
+find_package(GMatElastoPlastic REQUIRED)
+# find_package(GMatElastoPlasticFiniteStrainSimo REQUIRED)
+find_package(GMatNonLinearElastic REQUIRED)
 
 add_library(libraries INTERFACE IMPORTED)
 
-target_link_libraries(libraries INTERFACE GooseFEM HighFive XDMFWrite_HighFive)
+target_link_libraries(libraries INTERFACE
+    GooseFEM
+    HighFive
+    XDMFWrite_HighFive
+    GMatElastic
+    GMatElastoPlastic
+    # GMatElastoPlasticFiniteStrainSimo
+    GMatNonLinearElastic)
 
-if (SIMD)
+if(SIMD)
     target_link_libraries(libraries INTERFACE xtensor::optimize xtensor::use_xsimd)
 endif()
 
-if (WARNINGS)
+if(WARNINGS)
     target_link_libraries(libraries INTERFACE GooseFEM::compiler_warnings)
 endif()
 
-if (DEBUG)
+if(ASSERT)
+    target_link_libraries(libraries INTERFACE GooseFEM::assert)
+endif()
+
+if(DEBUG)
     target_link_libraries(libraries INTERFACE GooseFEM::debug)
 endif()
 
@@ -38,6 +54,7 @@ set(exec "statics_FixedDisplacements_LinearElastic_example")
 set(source "statics/FixedDisplacements_LinearElastic/example.cpp")
 add_executable(${exec} ${source})
 target_link_libraries(${exec} PRIVATE libraries)
+add_test(NAME ${exec} COMMAND ${exec})
 
 # create executable
 
@@ -45,6 +62,7 @@ set(exec "statics_FixedDisplacements_LinearElastic_manual_partition")
 set(source "statics/FixedDisplacements_LinearElastic/manual_partition.cpp")
 add_executable(${exec} ${source})
 target_link_libraries(${exec} PRIVATE libraries)
+add_test(NAME ${exec} COMMAND ${exec})
 
 # create executable
 
@@ -52,6 +70,7 @@ set(exec "statics_MixedPeriodic_LinearElastic_example")
 set(source "statics/MixedPeriodic_LinearElastic/example.cpp")
 add_executable(${exec} ${source})
 target_link_libraries(${exec} PRIVATE libraries)
+add_test(NAME ${exec} COMMAND ${exec})
 
 # create executable
 
@@ -59,13 +78,15 @@ set(exec "statics_Periodic_ElastoPlastic_main")
 set(source "statics/Periodic_ElastoPlastic/main.cpp")
 add_executable(${exec} ${source})
 target_link_libraries(${exec} PRIVATE libraries)
+add_test(NAME ${exec} COMMAND ${exec})
 
 # create executable
 
-set(exec "statics_Periodic_ElastoPlasticFiniteStrainSimo_main")
-set(source "statics/Periodic_ElastoPlasticFiniteStrainSimo/main.cpp")
-add_executable(${exec} ${source})
-target_link_libraries(${exec} PRIVATE libraries)
+# set(exec "statics_Periodic_ElastoPlasticFiniteStrainSimo_main")
+# set(source "statics/Periodic_ElastoPlasticFiniteStrainSimo/main.cpp")
+# add_executable(${exec} ${source})
+# target_link_libraries(${exec} PRIVATE libraries)
+# add_test(NAME ${exec} COMMAND ${exec})
 
 # create executable
 
@@ -73,6 +94,7 @@ set(exec "statics_Periodic_LinearElastic_main")
 set(source "statics/Periodic_LinearElastic/main.cpp")
 add_executable(${exec} ${source})
 target_link_libraries(${exec} PRIVATE libraries)
+add_test(NAME ${exec} COMMAND ${exec})
 
 # create executable
 
@@ -80,5 +102,6 @@ set(exec "statics_Periodic_NonLinearElastic_main")
 set(source "statics/Periodic_NonLinearElastic/main.cpp")
 add_executable(${exec} ${source})
 target_link_libraries(${exec} PRIVATE libraries)
+add_test(NAME ${exec} COMMAND ${exec})
 
 
