--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,6 @@ on:
   push:
     branches:
       - master
-      - stable
-      - v*
 
 jobs:
 
@@ -30,7 +28,7 @@ jobs:
     - name: Basic GitHub action setup
       uses: actions/checkout@v2
 
-    - name: Set conda test environment
+    - name: Set conda environment "test"
       uses: conda-incubator/setup-miniconda@v2
       with:
         mamba-version: "*"
@@ -44,7 +42,7 @@ jobs:
       if: runner.os == 'Linux'
       run: cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON -DCMAKE_BUILD_TYPE=RELEASE
 
-    - name: Configure using CMake (no examples)
+    - name: Configure using CMake (without examples)
       if: runner.os != 'Linux'
       run: cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=OFF -DCMAKE_BUILD_TYPE=RELEASE
 
