--- a/test/basic/CMakeLists.txt
+++ b/test/basic/CMakeLists.txt
@@ -6,14 +6,16 @@ if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
     find_package(GooseFEM REQUIRED CONFIG)
 endif()
 
-option(WARNINGS "Show build warnings" ON)
+set(ASSERT ON)
+set(DEBUG ON)
 option(SIMD "Enable xsimd" ON)
-option(ASSERT "Enable assertions" ON)
-option(DEBUG "Enable all assertions" ON)
+option(WARNINGS "Enable warnings" ON)
+
+set(test_name "test-basic")
 
 find_package(Catch2 REQUIRED)
 
-add_executable(test-basic
+add_executable(${test_name}
     main.cpp
     Allocate.cpp
     ElementHex8.cpp
@@ -26,20 +28,22 @@ add_executable(test-basic
     Vector.cpp
     VectorPartitioned.cpp)
 
-target_link_libraries(test-basic PRIVATE Catch2::Catch2 GooseFEM)
+target_link_libraries(${test_name} PRIVATE Catch2::Catch2 GooseFEM)
 
-if (SIMD)
-    target_link_libraries(test-basic PRIVATE xtensor::optimize xtensor::use_xsimd)
+if(SIMD)
+    target_link_libraries(${test_name} PRIVATE xtensor::optimize xtensor::use_xsimd)
 endif()
 
-if (WARNINGS)
-    target_link_libraries(test-basic PRIVATE GooseFEM::compiler_warnings)
+if(WARNINGS)
+    target_link_libraries(${test_name} PRIVATE GooseFEM::compiler_warnings)
 endif()
 
-if (ASSERT)
-    target_link_libraries(test-basic PRIVATE GooseFEM::assert)
+if(ASSERT)
+    target_link_libraries(${test_name} PRIVATE GooseFEM::assert)
 endif()
 
-if (DEBUG)
-    target_link_libraries(test-basic PRIVATE GooseFEM::debug)
+if(DEBUG)
+    target_link_libraries(${test_name} PRIVATE GooseFEM::debug)
 endif()
+
+add_test(NAME ${test_name} COMMAND ${test_name})
