--- a/test/gmat/CMakeLists.txt
+++ b/test/gmat/CMakeLists.txt
@@ -6,10 +6,12 @@ if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
     find_package(GooseFEM REQUIRED CONFIG)
 endif()
 
-option(WARNINGS "Show build warnings" ON)
+set(ASSERT ON)
+set(DEBUG ON)
 option(SIMD "Enable xsimd" ON)
-option(ASSERT "Enable assertions" ON)
-option(DEBUG "Enable all assertions" ON)
+option(WARNINGS "Enable warnings" ON)
+
+set(test_name "test-gmat")
 
 find_package(Catch2 REQUIRED)
 
@@ -17,12 +19,12 @@ if(NOT WIN32)
     find_package(GMatElastic REQUIRED)
     find_package(GMatElastoPlasticQPot REQUIRED)
 
-    add_executable(test-gmat
+    add_executable(${test_name}
         main.cpp
         hybrid-elastic.cpp
         hybrid-elastoplasticqpot.cpp)
 
-    target_link_libraries(test-gmat PRIVATE
+    target_link_libraries(${test_name} PRIVATE
         Catch2::Catch2
         GooseFEM
         GMatElastic
@@ -30,28 +32,30 @@ if(NOT WIN32)
 else()
     find_package(GMatElastoPlasticQPot REQUIRED)
 
-    add_executable(test-gmat
+    add_executable(${test_name}
         main.cpp
         hybrid-elastoplasticqpot.cpp)
 
-    target_link_libraries(test-gmat PRIVATE
+    target_link_libraries(${test_name} PRIVATE
         Catch2::Catch2
         GooseFEM
         GMatElastoPlasticQPot)
 endif()
 
-if (SIMD)
-    target_link_libraries(test-gmat PRIVATE xtensor::optimize xtensor::use_xsimd)
+if(SIMD)
+    target_link_libraries(${test_name} PRIVATE xtensor::optimize xtensor::use_xsimd)
 endif()
 
-if (WARNINGS)
-    target_link_libraries(test-gmat PRIVATE GooseFEM::compiler_warnings)
+if(WARNINGS)
+    target_link_libraries(${test_name} PRIVATE GooseFEM::compiler_warnings)
 endif()
 
-if (ASSERT)
-    target_link_libraries(test-gmat PRIVATE GooseFEM::assert)
+if(ASSERT)
+    target_link_libraries(${test_name} PRIVATE GooseFEM::assert)
 endif()
 
-if (DEBUG)
-    target_link_libraries(test-gmat PRIVATE GooseFEM::debug)
+if(DEBUG)
+    target_link_libraries(${test_name} PRIVATE GooseFEM::debug)
 endif()
+
+add_test(NAME ${test_name} COMMAND ${test_name})
