Splitting environment in base <= test <= example

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,13 @@ jobs:
         activate-environment: test
         auto-activate-base: false
 
+    - name: Extending conda environment for testing
+      run: conda env update --file environment_test.yaml
+
+    - name: Extending conda environment to run examples
+      if: runner.os == 'Linux'
+      run: conda env update --file environment_examples.yaml
+
     - name: Configure using CMake (with examples)
       if: runner.os == 'Linux'
       run: cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON -DCMAKE_BUILD_TYPE=RELEASE
@@ -58,8 +65,8 @@ jobs:
         python setup.py install
 
     - name: Run Python examples
-      if: runner.os != 'Windows'
+      if: runner.os == 'Linux'
       run: |
-        conda install -c conda-forge python-gmatelastic
         python ./docs/examples/statics/FixedDisplacements_LinearElastic/example.py --no-plot
         python ./docs/examples/statics/FixedDisplacements_LinearElastic/manual_partition.py --no-plot
+
