--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,10 @@ jobs:
         python setup.py build
         python setup.py install
 
+    - name: Python tests
+      run: |
+        python test/basic-python/MeshQuad4.py
+
     - name: Run Python examples
       if: runner.os == 'Linux'
       run: |
