Splitting tests to pass Windows CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,10 @@ jobs:
         activate-environment: test
         auto-activate-base: false
 
+    - name: (Windows) Use clang instead of MSVC
+      if: runner.os == 'Windows'
+      run: conda install -c conda-forge clang-11
+
     - name: Extending conda environment for testing
       run: conda env update --file environment_test.yaml
 
@@ -50,8 +54,12 @@ jobs:
       run: cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON
 
     - name: Configure using CMake (without examples)
-      if: runner.os != 'Linux'
+      if: runner.os == 'macOS'
       run: cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=OFF
+
+    - name: Configure using CMake (without examples, using clang)
+      if: runner.os == 'Windows'
+      run: cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=OFF -DCMAKE_C_COMPILER=clang-cl -DCMAKE_CXX_COMPILER=clang-cl
 
     - name: Build C++ tests & examples
       run: cmake --build .
