--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
 
     - name: (Windows) Use clang instead of MSVC
       if: runner.os == 'Windows'
-      run: conda install -c conda-forge clang-11
+      run: conda install -c conda-forge clang
 
     - name: Extending conda environment for testing
       run: conda env update --file environment_test.yaml
